redesign, glasmorphism, new font

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         </div>
     </header>
     <body>
-        
+        <div>
+            
+        </div>
     </body>
     <footer>
         <div>
